--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,8 +19,7 @@
     "react-icons": "^5.5.0",
     "react-simple-typewriter": "^5.0.1",
     "react-toastify": "^11.0.5",
-    "resend": "^4.2.0",
-    "tailwindcss-textshadow": "^2.1.3"
+    "resend": "^4.2.0"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
