--- a/frontend/package.json
+++ b/frontend/package.json
@@ -25,10 +25,8 @@
     "react-phone-input-2": "^2.15.1",
     "react-simple-typewriter": "^5.0.1",
     "react-toastify": "^11.0.5",
-    "react-tsparticles": "^2.12.0",
     "resend": "^4.2.0",
-    "swiper": "^11.2.6",
-    "tsparticles": "^2.12.0"
+    "swiper": "^11.2.6"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
