--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@emailjs/browser": "^4.4.1",
     "@heroicons/react": "^2.2.0",
+    "axios": "^1.8.4",
     "classnames": "^2.5.1",
     "framer-motion": "^12.6.3",
     "gsap": "^3.12.7",
