--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,7 +16,7 @@
     "framer-motion": "^12.6.3",
     "gsap": "^3.12.7",
     "lucide-react": "^0.487.0",
-    "next": "15.2.4",
+    "next": "^15.2.4",
     "next-themes": "^0.4.6",
     "nodemailer": "^6.10.0",
     "react": "^18.3.1",
@@ -25,8 +25,10 @@
     "react-phone-input-2": "^2.15.1",
     "react-simple-typewriter": "^5.0.1",
     "react-toastify": "^11.0.5",
+    "react-tsparticles": "^2.12.2",
     "resend": "^4.2.0",
-    "swiper": "^11.2.6"
+    "swiper": "^11.2.6",
+    "tsparticles": "^3.8.1"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
